--- a/nest-backend/package.json
+++ b/nest-backend/package.json
@@ -33,6 +33,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
+    "handlebars": "^4.7.8",
+    "juice": "^11.1.0",
     "mongoose": "^9.1.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
